// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'acala' to 'polkadot' using bridgeSDK cross-chain 'DOT' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 998,
  "toChain": "(rounded 1000)",
}
`;

exports[`'acala' to 'polkadot' using bridgeSDK cross-chain 'DOT' > fee 1`] = `"(rounded 0.04)"`;

exports[`'acala' to 'polkadot' using bridgeSDK cross-chain 'DOT' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 1000,
  "toChain": 1000,
}
`;
